<resources>
    <string name="app_name">VolunteerHero</string>
    <string name="facebook_app_id">1510437562337974</string>
    <string name="fb_login_protocol_scheme">fb1510437562337974</string>

    <string name="create_event_text">Create Event</string>
    <string name="event_name_hint">Specify event name</string>
    <string name="event_description_hint">Specify event description</string>

    <string name="title_activity_opportunities_list">OpportunitiesListActivity</string>

    <string name="google_maps_api_key">AIzaSyAIEug8FHRoU8Khm7H493xnvitf56OikIU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_type_button_text">Event Type</string>
    <string name="event_address_button">Event Address</string>
    <string name="event_date_test">Event Date</string>
    <string name="subscribe">Subscribe</string>
    <string name="retry">Retry</string>
    <string name="ok">Ok</string>
    <string name="test_error_message_1">This is a test error 1.</string>
    <string name="test_error_message_2">This is a test error 2.</string>
    <string name="cannot_decode_image">Cannot decode image.</string>
    <string name="cannot_select_address">Problem selecting address.</string>
    <string name="vacancies">Vacancies</string>
    <string name="contact">Contact :</string>
    <string name="string_event_list">Events</string>
    <string name="string_nearby_events">Nearby Events</string>
    <string name="string_my_events">My Events</string>
    <string name="string_filters">Settings</string>
    <string name="string_event_name">Text</string>
    <string name="string_change_filter">Add Filter</string>
    <string name="string_settings">Settings</string>
    <string name="string_clear">Clear Filters</string>
    <string name="string_logout">Log Out</string>
    <string name="cover_photo_upload_failed">Cover image upload failed.</string>
    <string name="action_filter">Filter</string>
    <string name="string_search_query">Search</string>
    <string name="string_loc_query">Location</string>
    <string name="string_lat_long">Lat, Long</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="delete_event">Delete Event</string>
    <string name="event_deleted">Event Deleted</string>
    <string name="undelete">Undelete</string>
    <string name="shareButton">Share button</string>
    <string name="eventImage">Event image</string>
    <string name="orgName">orgName</string>
    <string name="specify_event_date">Specify Event Date</string>
    <string name="specify_event_location">Specify event location</string>
    <string name="logo_header">Be The Hero We Deserve</string>

</resources>
