<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_event_list"
            android:icon="@drawable/ic_events"
            android:title="@string/string_event_list"/>
        <item
            android:id="@+id/nav_nearby_events"
            android:icon="@drawable/ic_location"
            android:title="@string/string_nearby_events"/>
        <item
            android:id="@+id/nav_my_events"
            android:icon="@drawable/ic_my_events"
            android:title="@string/string_my_events"/>
    </group>

    <item android:title="@string/string_filters" android:icon="@drawable/ic_menu_settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_filter_settings"
                    android:icon="@drawable/ic_menu_filter"
                    android:title="@string/string_change_filter"/>

                <item
                    android:id="@+id/nav_filter_clear"
                    android:icon="@drawable/ic_clear_menu"
                    android:title="@string/string_clear" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout_user"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/string_logout" />
</menu>