<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:srcCompat="@android:drawable/stat_notify_error"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:transitionName="@string/eventImage"
        android:contentDescription="@string/eventImage"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivImage"
        android:layout_alignBottom="@+id/ivImage"
        android:layout_alignStart="@+id/ivImage"
        android:layout_below="@+id/ivImage"
        android:layout_marginStart="20dp"
        android:layout_marginTop="125dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:textColor="@color/accent_color"
        tools:text="Adoptathon! This is wrapping around stuff in another line"/>

    <TextView
        android:id="@+id/tvOrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvTitle"
        android:layout_below="@+id/ivImage"
        android:transitionName="@string/orgName"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        tools:text="SF SPCA"/>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvOrg"
        android:layout_below="@+id/tvOrg"
        android:layout_marginTop="5dp"
        tools:text="Virtual"/>

    <TextView
        android:id="@+id/tvNumVacancies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLocation"
        android:layout_toEndOf="@+id/tvVacancies"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        tools:text="30"/>

    <TextView
        android:id="@+id/tvActivities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvVacancies"
        android:layout_below="@+id/tvVacancies"
        android:layout_marginTop="10dp"
        tools:text="Coaching, organizing"/>

    <ImageButton
        android:id="@+id/ibShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tvOrg"
        android:layout_marginEnd="21dp"
        android:contentDescription="@string/shareButton"
        app:srcCompat="?attr/actionModeShareDrawable"/>

    <TextView
        android:id="@+id/tvVacancies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvNumVacancies"
        android:layout_alignStart="@+id/tvLocation"
        android:text="@string/vacancies"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvActivities"
        android:layout_below="@+id/tvActivities"
        android:layout_marginTop="10dp"
        android:text="@string/contact"/>

    <TextView
        android:id="@+id/tvContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        tools:text="John Doe"/>

    <TextView
        android:id="@+id/tvContactEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:autoLink="email"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/btnSubscribe"
        android:layout_marginBottom="15dp"
        tools:text="email@codepath.com"/>
    <Button
        android:id="@+id/btnSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tvOrg"
        android:layout_marginBottom="10dp"
        android:text="@string/subscribe"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_event"
        android:layout_toEndOf="@+id/btnSubscribe"
        android:layout_alignTop="@+id/btnSubscribe"
        android:layout_marginStart="13dp" />


</RelativeLayout>