<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/outer_fragment_layout">


    <ImageView
        android:id="@+id/upload_cover_image_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:src="@mipmap/ic_upload_cover_photo" />

    <Button
        android:id="@+id/create_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="15dp"
        android:text="@string/create_event_text" />

    <EditText
        android:id="@+id/event_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/create_event_button"
        android:layout_below="@+id/upload_cover_image_button"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/event_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/event_description_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/event_name_edit_text"
        android:layout_below="@+id/event_name_edit_text"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/event_description_hint"
        android:inputType="textPersonName" />

</RelativeLayout>